<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Menu_Recicla">

    <TextView
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_menu"
        android:textColor="@color/green"
        android:textSize="35sp"
        android:textStyle="bold"
        />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green_menu1"
        android:onClick="recicla"
        android:text="@string/app_botton1" />

    <Button
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green_menu2"
        android:onClick="tipos"
        android:text="@string/app_botton2" />

    <Button
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green_menu3"
        android:onClick="metodos"
        android:text="@string/app_botton3" />



    <ImageView
        android:layout_width="191dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_2" />
</LinearLayout>