<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reciclaje">

    <TextView
        android:id="@+id/app_titulo1"
        android:text="@string/app_titulo1"
        android:layout_width="wrap_content"
        android:textColor="@color/green"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="35sp" />
    <VideoView
        android:id="@+id/vvinicial"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:foregroundGravity="center"
        android:layout_margin="30dp"/>


    <ImageView
        android:id="@+id/img_negroT"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/img1" />

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-95dp"
        android:text="@string/app_info1"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_verdet"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img2" />


    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-95dp"
        android:text="@string/app_info2"
        android:textSize="13sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/img_blancot"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_3" />

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-95dp"
        android:text="@string/app_info1"
        android:textSize="13sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/img_canasta"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_1" />
</LinearLayout>